--- a/hello.html
+++ b/hello.html
@@ -1,18 +1,51 @@
-<!DOCTYPE>
+<!DOCTYPE html>
+
 <html>
+
+<head>
+
+    <meta charset="UTF-8">
+
+    <title></title>
+
 <style>
 
+    div{background:orange;
+
+        float:left;
+
+        padding:15%;
+
+        margin:1%;
+
+        border-radius:10%;
+
+         }
+
 </style>
-<head>
+
 </head>
+
 <body>
-<div>
-margin-top:10px;
-margin-right:10px;
-margin-bottom:10px;
-margin-left:10px;
-color:yellow;
-</div>
+
+<div></div>
+
+<div></div>
+
+<div></div>
+
+<div></div>
+
+<div></div>
+
+<div></div>
+
+<div></div>
+
+<div></div>
+
+<div></div>
+
 </body>
 
 </html>
