--- a/hello.html
+++ b/hello.html
@@ -14,9 +14,9 @@
 
         float:left;
 
-        padding:15%;
+        padding:15vw;
 
-        margin:1%;
+        margin:1vw;
 
         border-radius:10%;
 
