--- a/test4/test4.html
+++ b/test4/test4.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -15,10 +15,10 @@
 <div class="main">
     <form action="css/demo_form.asp" method="post">
         <div class="zh">
-            <input type="text"  placeholder="请输入手机号" style="width: 80%;height:50px;"><br>
+            <input type="text"  placeholder="请输入手机号" style="width: 100%;height:50px;"><br>
         </div>
         <div class="pw">
-            <input type="password"  placeholder="请输入密码" style="width: 80%;height:50px;"><br>
+            <input type="password"  placeholder="请输入密码" style="width: 100%;height:50px;"><br>
         </div>
         <div class="login">
             <input type="submit" value="登录" style="width: 100%;height:50px;">
