--- a/test6/test6.html
+++ b/test6/test6.html
@@ -69,27 +69,27 @@
         <ul>
             <li>
                 <p class="fwrq">服务日期</p>
-                <p class="time">2015-7-5 至 2015-7-12 <span>45元/小时</span><a href="http://119.10.57.69:880/jnshu3938/test5/test5.html"></a></p>
+                <p class="time">2015-7-5 至 2015-7-12 <span>45元/小时<a href="http://119.10.57.69:880/jnshu3938/test5/test5.html"></a></span></p>
                 <p class="diz">北京.通州.果园</p>
             </li>
             <li>
                 <p class="fwrq">服务日期</p>
-                <p class="time">2015-7-5 至 2015-7-12 <span>45元/小时</span><a href="http://119.10.57.69:880/jnshu3938/test5/test5.html"></a></p>
+                <p class="time">2015-7-5 至 2015-7-12 <span>45元/小时<a href="http://119.10.57.69:880/jnshu3938/test5/test5.html"></a></span></p>
                 <p class="diz">北京.通州.果园</p>
             </li>
             <li>
                 <p class="fwrq">服务日期</p>
-                <p class="time">2015-7-5 至 2015-7-12 <span>45元/小时</span><a href="http://119.10.57.69:880/jnshu3938/test5/test5.html"></a></p>
+                <p class="time">2015-7-5 至 2015-7-12 <span>45元/小时<a href="http://119.10.57.69:880/jnshu3938/test5/test5.html"></a></span></p>
                 <p class="diz">北京.通州.果园</p>
             </li>
             <li>
                 <p class="fwrq">服务日期</p>
-                <p class="time">2015-7-5 至 2015-7-12 <span>45元/小时</span><a href="http://119.10.57.69:880/jnshu3938/test5/test5.html"></a></p>
+                <p class="time">2015-7-5 至 2015-7-12 <span>45元/小时<a href="http://119.10.57.69:880/jnshu3938/test5/test5.html"></a></span></p>
                 <p class="diz">北京.通州.果园</p>
             </li>
             <li>
                 <p class="fwrq">服务日期</p>
-                <p class="time">2015-7-5 至 2015-7-12 <span>45元/小时</span><a href="http://119.10.57.69:880/jnshu3938/test5/test5.html"></a></p>
+                <p class="time">2015-7-5 至 2015-7-12 <span>45元/小时<a href="http://119.10.57.69:880/jnshu3938/test5/test5.html"></a></span></p>
                 <p class="diz">北京.通州.果园</p>
             </li>
         </ul>
